k8s/agentx-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agentx-frontend
  namespace: agentx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agentx-frontend
  template:
    metadata:
      labels:
        app: agentx-frontend
    spec:
      containers:
      - name: frontend
        image: 678299176754.dkr.ecr.us-east-1.amazonaws.com/agentx/fe:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
